--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
           manifest.json provides metadata used when your web app is added to the
           homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
         -->
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon.png" />
+    <link rel="manifest" href="/rvc-dashboard/manifest.json" />
+    <link rel="shortcut icon" href="/rvc-dashboard/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/rvc-dashboard/apple-icon.png" />
     <link
       rel="stylesheet"
       href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css"
@@ -46,50 +46,50 @@
       rel="stylesheet"
     />
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script> -->
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="/rvc-dashboard/favicon.ico" />
     <title>Purity UI Dashboard by tPikachu</title>
-    <script type="module" crossorigin src="/assets/index.b86747d6.js"></script>
-    <link rel="modulepreload" href="/assets/object-assign.9840bf7d.js">
-    <link rel="modulepreload" href="/assets/react.7ded48a1.js">
-    <link rel="modulepreload" href="/assets/scheduler.36f34167.js">
-    <link rel="modulepreload" href="/assets/react-dom.8726e5f6.js">
-    <link rel="modulepreload" href="/assets/regenerator-runtime.583c0412.js">
-    <link rel="modulepreload" href="/assets/@babel.d4c7f82f.js">
-    <link rel="modulepreload" href="/assets/history.8c9dd0e1.js">
-    <link rel="modulepreload" href="/assets/react-router.78edfd73.js">
-    <link rel="modulepreload" href="/assets/react-router-dom.4101608d.js">
-    <link rel="modulepreload" href="/assets/react-is.aca5ba34.js">
-    <link rel="modulepreload" href="/assets/hoist-non-react-statics.28f10652.js">
-    <link rel="modulepreload" href="/assets/stylis.471761e6.js">
-    <link rel="modulepreload" href="/assets/@emotion.c45eda2e.js">
-    <link rel="modulepreload" href="/assets/lodash.mergewith.73595596.js">
-    <link rel="modulepreload" href="/assets/@popperjs.031b8b1a.js">
-    <link rel="modulepreload" href="/assets/tslib.2bd10da0.js">
-    <link rel="modulepreload" href="/assets/style-value-types.558ea47d.js">
-    <link rel="modulepreload" href="/assets/hey-listen.45400d5c.js">
-    <link rel="modulepreload" href="/assets/framesync.9f9facff.js">
-    <link rel="modulepreload" href="/assets/popmotion.7b246e2b.js">
-    <link rel="modulepreload" href="/assets/framer-motion.c01743df.js">
-    <link rel="modulepreload" href="/assets/focus-lock.9fb50670.js">
-    <link rel="modulepreload" href="/assets/use-sidecar.aa4a0fa4.js">
-    <link rel="modulepreload" href="/assets/use-callback-ref.38831812.js">
-    <link rel="modulepreload" href="/assets/react-clientside-effect.e38ba01c.js">
-    <link rel="modulepreload" href="/assets/react-focus-lock.772250f1.js">
-    <link rel="modulepreload" href="/assets/get-nonce.d5e269e9.js">
-    <link rel="modulepreload" href="/assets/react-style-singleton.55676bbd.js">
-    <link rel="modulepreload" href="/assets/react-remove-scroll-bar.eb26885f.js">
-    <link rel="modulepreload" href="/assets/react-remove-scroll.3a21e2e7.js">
-    <link rel="modulepreload" href="/assets/aria-hidden.d5dd0c65.js">
-    <link rel="modulepreload" href="/assets/@ctrl.afc734ac.js">
-    <link rel="modulepreload" href="/assets/react-fast-compare.6ca799e7.js">
-    <link rel="modulepreload" href="/assets/@chakra-ui.9b2c274d.js">
-    <link rel="modulepreload" href="/assets/prop-types.457396e8.js">
-    <link rel="modulepreload" href="/assets/apexcharts.71817ebd.js">
-    <link rel="modulepreload" href="/assets/react-apexcharts.12ed1503.js">
-    <link rel="modulepreload" href="/assets/react-icons.9f7e3a4c.js">
-    <link rel="modulepreload" href="/assets/loadjs.3cc34aa9.js">
-    <link rel="modulepreload" href="/assets/react-twitter-widgets.dc836d3b.js">
-    <link rel="modulepreload" href="/assets/react-github-btn.0d4249c5.js">
+    <script type="module" crossorigin src="/rvc-dashboard/assets/index.e49599a7.js"></script>
+    <link rel="modulepreload" href="/rvc-dashboard/assets/object-assign.9840bf7d.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/react.7ded48a1.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/scheduler.36f34167.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/react-dom.8726e5f6.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/regenerator-runtime.583c0412.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/@babel.d4c7f82f.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/history.8c9dd0e1.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/react-router.78edfd73.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/react-router-dom.4101608d.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/react-is.aca5ba34.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/hoist-non-react-statics.28f10652.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/stylis.471761e6.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/@emotion.c45eda2e.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/lodash.mergewith.73595596.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/@popperjs.031b8b1a.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/tslib.2bd10da0.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/style-value-types.558ea47d.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/hey-listen.45400d5c.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/framesync.9f9facff.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/popmotion.7b246e2b.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/framer-motion.c01743df.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/focus-lock.9fb50670.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/use-sidecar.aa4a0fa4.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/use-callback-ref.38831812.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/react-clientside-effect.e38ba01c.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/react-focus-lock.772250f1.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/get-nonce.d5e269e9.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/react-style-singleton.55676bbd.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/react-remove-scroll-bar.eb26885f.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/react-remove-scroll.3a21e2e7.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/aria-hidden.d5dd0c65.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/@ctrl.afc734ac.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/react-fast-compare.6ca799e7.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/@chakra-ui.9b2c274d.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/prop-types.457396e8.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/apexcharts.71817ebd.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/react-apexcharts.12ed1503.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/react-icons.9f7e3a4c.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/loadjs.3cc34aa9.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/react-twitter-widgets.dc836d3b.js">
+    <link rel="modulepreload" href="/rvc-dashboard/assets/react-github-btn.0d4249c5.js">
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
