--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     />
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script> -->
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-    <title>Purity UI Dashboard by tPikachu</title>
+    <title>RVC Dashboard by tPikachu</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
