--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     />
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script> -->
     <link rel="shortcut icon" type="image/x-icon" href="/RVC-Dashboard/favicon.ico" />
-    <title>Purity UI Dashboard by tPikachu</title>
-    <script type="module" crossorigin src="/RVC-Dashboard/assets/index.e49599a7.js"></script>
+    <title>RVC Dashboard by tPikachu</title>
+    <script type="module" crossorigin src="/RVC-Dashboard/assets/index.8b912f21.js"></script>
     <link rel="modulepreload" href="/RVC-Dashboard/assets/object-assign.9840bf7d.js">
     <link rel="modulepreload" href="/RVC-Dashboard/assets/react.7ded48a1.js">
     <link rel="modulepreload" href="/RVC-Dashboard/assets/scheduler.36f34167.js">
